public interface Observateur {
    void reagir();
}
